update docker base image and docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,14 @@ services:
   base:
     build:
       context: .
-    image: 'developmentseed/sat-fetch:latest'
+    image: 'sat-utils/sat-fetch:latest'
     env_file: .env
     entrypoint: /bin/bash
     volumes:
       - '.:/home/geolambda/work'
 
   test:
-    image: 'developmentseed/sat-fetch:latest'
+    image: 'sat-utils/sat-fetch:latest'
     entrypoint: bash -c 'pytest -v test/'
     working_dir: /home/geolambda
     env_file: .env
