--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,7 @@ jobs:
             pip install virtualenv
             virtualenv ~/venv27
             . ~/venv27/bin/activate
+            pip install -r requirements-pre.txt
             pip install -r requirements.txt
             pip install -r requirements-dev.txt
             nosetests -v --with-coverage --cover-package satfetch
@@ -72,6 +73,7 @@ jobs:
             python3 -m venv ~/venv
             . ~/venv/bin/activate
             pwd
+            pip install -r requirements-pre.txt
             pip install -r requirements.txt
             pip install -r requirements-dev.txt
             nosetests -v --with-coverage --cover-package satfetch
