--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ jobs:
           name: Deploy Docker image
           command: |
             docker login -u ${DOCKER_USER} -p ${DOCKER_PASS}
-            VERSION=$(jq --raw-output .version lerna.json)
+            VERSION=`awk -F\' '{print $2,$4}' satfetch/version.py`
             docker tag satutils/sat-fetch:latest satutils/sat-fetch:${VERSION}
             docker push satutils/sat-fetch:latest 
             docker push satutils/sat-fetch:${VERSION}
