--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,7 +71,7 @@ jobs:
           command: |
             mkdir -p ~/.ssh
             ssh-keyscan github.com >> ~/.ssh/known_hosts
-            pip install twine
+            pip install --user twine
             python setup.py sdist
             #VERSION=`awk -F\' '{print $2,$4}' satfetch/version.py`
             #git tag $VERSION
