--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,9 +69,11 @@ jobs:
       - run:
           name: Deploy
           command: |
+            python -m venv ~/venv
+            . ~/venv/bin/activate
             mkdir -p ~/.ssh
             ssh-keyscan github.com >> ~/.ssh/known_hosts
-            pip install --user twine
+            pip install twine
             python setup.py sdist
             #VERSION=`awk -F\' '{print $2,$4}' satfetch/version.py`
             #git tag $VERSION
