--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,8 +24,8 @@ jobs:
 
 
   docker_build_and_test:
-    machine:
-      docker_layer_caching: true
+    #machine:
+    #  docker_layer_caching: true
     steps:
       - *restore_repo
       - checkout
@@ -40,8 +40,8 @@ jobs:
             docker run -v ${PWD}:/home/geolambda -it satutils/sat-fetch:latest pytest -v -s --cov satfetch --cov-report term-missing
 
   docker_deploy:
-    machine:
-      docker_layer_caching: true
+    #machine:
+    #  docker_layer_caching: true
     steps:
       - *restore_repo
       - run:
