--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:
       - run:
           name: Build Docker image
           command: |
-            docker build -t satutils/sat-api:latest .
+            docker build -t satutils/sat-fetch:latest .
       - run:
           name: Deploy Docker image
           command: |
